@@ -13,6 +13,7 @@
   * Added functions to lsl.common.adp to calculate the magnitude response of the TBN and DRX filters
   * Small fix to lsl.common.metabundle(ADP).getSessionMetaData() to make it more robust
   * Updated the lsl.skymap.SkyMapLFSM module to the 2018 April 23 version of the model
+  * Added support for the UQR global ionospheric model to the lsl.misc.ionosphere module
 
 1.2.0
   * Added a new lsl.common.adp module to help describe ADP
